# weekend_cv

./: .gitignore
robot/: README.md  pyproject.toml  requirements.txt
robot/src/: CameraInterface.py  ImageProcessing.py  Part.py
