[project]
name = "src"
version = "0.1.0"
description = "\"\""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = ""}
readme = "README.md"
requires-python = "3.11"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pyrealsense2 (>=2.55.1.6486,<3.0.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "ezdxf (>=1.3.5,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false
